[package]
name = "hokan"
version = "0.1.0"
edition = "2024"
rust-version = "1.89.0"
description = "Hokan (補完) — unified completion engine for Neovim with LSP, buffer, path, and snippet sources"
homepage = "https://github.com/pleme-io/hokan"
repository = "https://github.com/pleme-io/hokan"
readme = "README.md"
license = "MIT"
categories = ["text-editors"]
keywords = ["neovim", "completion", "lsp", "snippets"]

[lib]
crate-type = ["cdylib", "rlib"]

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
missing_errors_doc = "allow"
missing_panics_doc = "allow"

[dependencies]
nvim-oxi = { version = "0.6", features = ["neovim-0-11"] }
tane = { path = "../tane", version = "0.1.0" }
waku = { path = "../waku", version = "0.1.0" }
furui = { path = "../furui", version = "0.1.0" }
